2025-05-14  Zhengyi Fu  <i@fuzy.me>

	Remove exwm.el

	* site-lisp/exde.el: Remove file.
	* packages.el: Remove packages needed by exwm.el.
	* init.el (+consult-firefox-filter, +consult-source-firefox): Remove variables.
	(+exwm--command-line-handler): Remove function.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (completing-read-multiple): Only define this advice when
	emacs-version < 31.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el: Fix usage of `blackout'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-replace-state-name-list): Customize meow state indicators.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	Add `nerd-icons-grep'

	* packages.el (nerd-icons-grep): Add package `nerd-icons-grep'.
	* init.el: Load it when `grep' is loaded.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (+embark-consult-export-grep--headings): Remove function.
	grep heading is directly supported by consult now.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	Prefer `visual-fill-column-mode' over `olivetti-mode' and
	`visual-line-fill-column-mode'

	* init.el (+visual-fill-column/toggle-visual-fill-and-center): Use
	`visual-fill-column-mode' instead of `visual-line-fill-column-mode'.
	(org-mode-map): Remove local keybinding for `olivetti-mode'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el <consult>: Bind M-s D to `consult-fd', M-s R to `consult-ugrep'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (auto-mode-alist): Use `makefile-mode' to visit qmake
	files.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	Remove doom-modeline

	* packages.el (blackout): Add package.
	(doom-modeline): Remove package.

	* init.el: Remove configuration for `doom-modeline'.
	Remove some minor mode lighters using `blackout'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (add-change-log-entry): Temporarily bind
	`add-log-always-start-new-record' to t if WHOMAI is non-nil.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/consult-ugrep.el (consult-ugrep-args): Add